# dem-left-tracker

./: .gitignore  README.md  justfile  main.py  pyproject.toml
scraper/: civic_clerk.py
